--- a/spring-security-demo/src/main/resources/application.properties
+++ b/spring-security-demo/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=spring-security-demo
+spring.datasource.url = jdbc:mysql://localhost:3306/emp_db?createDatabaseIfNotExist=true
+spring.datasource.username = root
+spring.datasource.password = Jithin@2002
+
+# Hibernate properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.hibernate.ddl-auto = update
